Upgrade: hover in trend gifs

--- a/index.html
+++ b/index.html
@@ -99,18 +99,10 @@
             </div>
         </div>
     </section>
-    <section class="tendencies">
+    <section class="trends">
         <div class="container">
             <input type="text" placeholder="Tendencias:" disabled>
             <div class="gif-grid">
-                <div class="gif-box">
-                    <div class="gif-container">
-                        <img src="" alt="Tendency GIF">
-                    </div>
-                    <div class="bar">
-                        <p>Lala</p>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
