upgrade: mis guifos almost ready

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="gif-box">
                     <div class="bar">
                         <p></p>
-                        <button class="close-button"><img src="./assets/img/button close.svg" alt="Close button"></button>
+                        <button class="close-button"><img src="./assets/img/button_close.svg" alt="Close button"></button>
                     </div>
                     <div class="gif-container">
                         <img src="" alt="Suggested GIF">
@@ -74,7 +74,7 @@
                 <div class="gif-box">
                     <div class="bar">
                         <p></p>
-                        <button class="close-button"><img src="./assets/img/button close.svg" alt="Close button"></button>
+                        <button class="close-button"><img src="./assets/img/button_close.svg" alt="Close button"></button>
                     </div>
                     <div class="gif-container">
                         <img src="" alt="Suggested GIF">
@@ -84,7 +84,7 @@
                 <div class="gif-box">
                     <div class="bar">
                         <p></p>
-                        <button class="close-button"><img src="./assets/img/button close.svg" alt="Close button"></button>
+                        <button class="close-button"><img src="./assets/img/button_close.svg" alt="Close button"></button>
                     </div>
                     <div class="gif-container">
                         <img src="" alt="Suggested GIF">
@@ -94,7 +94,7 @@
                 <div class="gif-box">
                     <div class="bar">
                         <p></p>
-                        <button class="close-button"><img src="./assets/img/button close.svg" alt="Close button"></button>
+                        <button class="close-button"><img src="./assets/img/button_close.svg" alt="Close button"></button>
                     </div>
                     <div class="gif-container">
                         <img src="" alt="Suggested GIF">
