Upgrade: style-night for Mis Guifos

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </a>
             <div class="nav-button">
                 <!-- <button id="create-gifos" class="guifos">Crear Guifos</button> -->
-                <div class="createGuifosButton guifos">
+                <div class="guifos">
                     <a href="./mis-guifos.html">Crear Guifos</a> <!-- TODO hacer que se ejecute la funcion createGuifos() -->
                 </div>
                 <button class="theme" onclick="toggleButton();">
