Upgrade: starting recording window

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="box">
                 <div class="bar">Buscar</div>
                 <div class="search-container">
-                    <input type="text" placeholder="Busca gifs, hashtags, temas, busca lo que quieras…">
+                    <input type="text" placeholder="Busca gifs, hashtags, temas, busca lo que quieras…" oninput="addButtonClass();">
                     <button id="search" type="button" class="search-button">
                         <img src="./assets/img/lupa_inactive.svg" alt="Lupa Inactive">
                         <p>Buscar</p>
