--- a/mis-guifos.html
+++ b/mis-guifos.html
@@ -39,13 +39,13 @@
         </div>
     </nav>
     <section class="create-guifos hidden">
-        <div class="window-container">
+        <div class="window-container confirm">
             <div class="bar">
                 <p>Crear Guifos</p>
             </div>
             <img src="./assets/img/window_img.png" alt="Window image">
             <div class="text-container">
-                <h2>Aquí podrás crear tus propios guifos</h2><br>
+                <h2>Aquí podrás crear tus propios guifos</h2>
                 <p>
                     Crear tu <b><i>guifo</i></b> muy fácil, graba cualquier imagen con tu cámara y obtén guidos personalizados.
                     Los pasos para crear tu guifo son:
@@ -60,6 +60,20 @@
                 <button class="cancelar">Cancelar</button>
                 <button class="comenzar">Comenzar</button>
             </div>
+        </div>
+        <div class="window-container check">
+            <div class="bar">
+                <p>Un Chequeo Antes de Empezar</p>
+            </div>
+            <div class="img-border">
+                <img src="" alt="">
+            </div>
+            <button class="capturar">
+                <div class="button-container">
+                    <span class="icon"><img src="." alt=""></span>
+                    <span class="button-text">Capturar</span>
+                </div>
+            </button>
         </div>
     </section>
     <section class="mis-guifos">
