--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
             <div class="box">
                 <div class="bar">Buscar</div>
                 <div class="search-container">
-                    <input type="text" placeholder="Busca gifs, hashtags, temas, busca lo que quieras…" oninput="addButtonClass();">
-                    <button id="search" type="button" class="search-button">
+                    <input type="text" placeholder="Busca gifs, hashtags, temas, busca lo que quieras…" oninput="onSearchInputChange(event);">
+                    <button id="search" type="button" class="search-button" onclick="prepareSearch()">
                         <img src="./assets/img/lupa_inactive.svg" alt="Lupa Inactive">
                         <p>Buscar</p>
                     </button>
-                </div>
-                    
+                </div>   
+            </div>
+            <div class="search-suggestions box hidden">
             </div>
         </div>
     </section>
