Upgrade: before starting w/video

--- a/mis-guifos.html
+++ b/mis-guifos.html
@@ -39,7 +39,7 @@
         </div>
     </nav>
     <section class="create-guifos hidden">
-        <div class="window-container confirm">
+        <div class="window-container start confirm">
             <div class="bar">
                 <p>Crear Guifos</p>
             </div>
