Upgrade: search ready

--- a/mis-guifos.html
+++ b/mis-guifos.html
@@ -67,7 +67,7 @@
                 <p>Un Chequeo Antes de Empezar</p>
             </div>
             <div class="img-border">
-                <img src="" alt="">
+                <video src=""></video>
             </div>
             <button class="capturar">
                 <div class="button-container">
