--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="box">
                 <div class="bar">Buscar</div>
                 <div class="search-container">
-                    <input type="text" placeholder="Busca gifs, hashtags, temas, busca lo que quieras…" oninput="onSearchInputChange(event);">
+                    <input type="text" placeholder="Busca gifs, hashtags, temas, busca lo que quieras…" oninput="onSearchInputChange();" onkeydown="onSearchInputKeydown(event)">
                     <button id="search" type="button" class="search-button" onclick="prepareSearch()">
                         <img src="./assets/img/lupa_inactive.svg" alt="Lupa Inactive">
                         <p>Buscar</p>
