Upgrade: getting ready night theme

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body theme="light">
     <header>
-        <p>¡Bienvenidos/as a Guifos.com! ------Donde los gifs están.////// Número de visitas 12.765.803</p> <!-- TODO -->
+        <p>¡Bienvenidos/as a Guifos.com! ------Donde los gifs están.////// Número de visitas 12.765.803</p>
     </header>
     <nav>
         <div class="container">
@@ -24,7 +24,7 @@
             </a>
             <div class="nav-button">
                 <div class="guifos">
-                    <a href="./mis-guifos.html" onclick="goToCreateGuifos(event, this);">Crear Guifos</a> <!-- TODO hacer que se ejecute la funcion createGuifos() -->
+                    <a href="./mis-guifos.html" onclick="goToCreateGuifos(event, this);">Crear Guifos</a>
                 </div>
                 <button class="theme" onclick="toggleButton();"> <!-- TODO que se cierre cuando apretas afuera -->
                     <div class="button-container">
@@ -48,7 +48,7 @@
                 <div class="search-container">
                     <input type="text" placeholder="Busca gifs, hashtags, temas, busca lo que quieras…" oninput="onSearchInputChange();" onkeydown="onSearchInputKeydown(event)">
                     <button id="search" type="button" class="search-button" onclick="prepareSearch()">
-                        <img src="./assets/img/lupa_inactive.svg" alt="Lupa Inactive">
+                        <img src="" alt="Lupa Inactive">
                         <p>Buscar</p>
                     </button>
                 </div>   
@@ -64,11 +64,11 @@
                 <div class="gif-box">
                     <div class="bar">
                         <p></p>
-                        <button class="close-button"><img src="./assets/img/button_close.svg" alt="Close button"></button>
+                        <button class="close-button"><img src="./assets/img/button_close.svg" alt="Close button"></button><!-- TODO darle funcion a la cruz -->
                     </div>
                     <div class="gif-container">
                         <img src="" alt="Suggested GIF">
-                        <button class="see-more">Ver más...</button>
+                        <button class="see-more">Ver más...</button><!-- TODO darle funcion a ver mas -->
                     </div>
                 </div>
                 <div class="gif-box">
