--- a/mis-guifos.html
+++ b/mis-guifos.html
@@ -58,7 +58,7 @@
                 </p>
             </div>
             <div class="create-button-container">
-                <button class="cancelar">Cancelar</button>
+                <button class="cancelar" onclick="window.location.reload();">Cancelar</button>
                 <button class="comenzar" onclick="startCheck();">Comenzar</button>
             </div>
         </div>
@@ -69,7 +69,10 @@
             <div class="img-border">
                 <video src=""></video>
             </div>
-            <button class="capturar">
+            <div class="counter hidden">
+                <p>00:00:00</p>
+            </div>
+            <button class="capturar" onclick="changeToRecordingStyle();">
                 <div class="button-container">
                     <span class="icon"><img src="./assets/img/camera.svg" alt="Camera"></span>
                     <span class="button-text">Capturar</span>
@@ -88,7 +91,7 @@
         </div>
     </section>
     
-    <script src="./assets/js/app.js"></script>
     <script src="./assets/js/mis-guifos.js"></script>
+    <script src="./assets/js/app.js"></script>
 </body>
 </html>
