--- a/mis-guifos.html
+++ b/mis-guifos.html
@@ -68,14 +68,23 @@
             </div>
             <div class="img-border">
                 <video src=""></video>
+                <img class="hidden gif-preview">
             </div>
             <div class="counter hidden">
                 <p>00:00:00</p>
             </div>
-            <button class="capturar" onclick="changeToRecordingStyle();">
+            <!-- <button class="capturar" onclick="changeToRecordingStyle();">    -->
+            <button class="capturar" onclick="startToRecordOnWindow();">
                 <div class="button-container">
                     <span class="icon"><img src="./assets/img/camera.svg" alt="Camera"></span>
                     <span class="button-text">Capturar</span>
+                </div>
+            </button>
+
+            <button class="recording hidden" onclick="stopToRecordOnWindow();">
+                <div class="button-container">
+                    <span class="icon"><img src="./assets/img/recording.svg" alt="Camera"></span>
+                    <span class="button-text">Listo</span>
                 </div>
             </button>
         </div>
@@ -91,7 +100,8 @@
         </div>
     </section>
     
-    <script src="./assets/js/mis-guifos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/RecordRTC/5.5.8/RecordRTC.js" type="text/javascript"></script>
     <script src="./assets/js/app.js"></script>
+    <script src="./assets/js/mis-guifos.js"></script>
 </body>
 </html>
