Upgrade: before uploading gif

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://kit.fontawesome.com/b3c5c11f23.js" crossorigin="anonymous"></script>
 
 </head>
-<body theme="light">
+<body data-theme="light">
     <header>
         <p>¡Bienvenidos/as a Guifos.com! ------Donde los gifs están.////// Número de visitas 12.765.803</p>
     </header>
