Upgrade: almost ready

--- a/mis-guifos.html
+++ b/mis-guifos.html
@@ -68,7 +68,7 @@
                 <p>Un Chequeo Antes de Empezar</p>
             </div>
             <div class="img-border">
-                <video src=""></video>
+                <video src="#"></video>
                 <img class="hidden gif-preview" alt="Gif preview">
                 <div class="uploading hidden">
                     <img src="./assets/img/globe_img.png" alt="Globe">
@@ -104,7 +104,7 @@
                 <p>Guifo Subido Con Éxito</p>
             </div>
             <div class="img-border">
-                <img src="" alt="Your gif">
+                <img src="#" alt="Your gif">
             </div>
             <h2>Guifo creado con éxito</h2>
             <div class="uploaded-buttons">
