--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="search-container">
                     <input type="text" placeholder="Busca gifs, hashtags, temas, busca lo que quieras…" oninput="onSearchInputChange();" onkeydown="onSearchInputKeydown(event)">
                     <button id="search" type="button" class="search-button" onclick="prepareSearch()">
-                        <img src="" alt="Lupa Inactive">
+                        <img src="#" alt="Lupa Inactive">
                         <p>Buscar</p>
                     </button>
                 </div>   
@@ -67,7 +67,7 @@
                         <button class="close-button"><img src="./assets/img/button_close.svg" alt="Close button"></button><!-- TODO darle funcion a la cruz -->
                     </div>
                     <div class="gif-container">
-                        <img src="" alt="Suggested GIF">
+                        <img src="#" alt="Suggested GIF">
                         <button class="see-more">Ver más...</button><!-- TODO darle funcion a ver mas -->
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                         <button class="close-button"><img src="./assets/img/button_close.svg" alt="Close button"></button>
                     </div>
                     <div class="gif-container">
-                        <img src="" alt="Suggested GIF">
+                        <img src="#" alt="Suggested GIF">
                         <button class="see-more">Ver más...</button>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
                         <button class="close-button"><img src="./assets/img/button_close.svg" alt="Close button"></button>
                     </div>
                     <div class="gif-container">
-                        <img src="" alt="Suggested GIF">
+                        <img src="#" alt="Suggested GIF">
                         <button class="see-more">Ver más...</button>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
                         <button class="close-button"><img src="./assets/img/button_close.svg" alt="Close button"></button>
                     </div>
                     <div class="gif-container">
-                        <img src="" alt="Suggested GIF">
+                        <img src="#" alt="Suggested GIF">
                         <button class="see-more">Ver más...</button>
                     </div>
                 </div>
