--- a/mis-guifos.html
+++ b/mis-guifos.html
@@ -73,9 +73,7 @@
                 <div class="uploading hidden">
                     <img src="./assets/img/globe_img.png" alt="Globe">
                     <h2>Estamos subiendo tu guifo...</h2>
-                    <div class="progress-bar">
-
-                    </div>
+                    <div id="progress-bar" class="progress-bar progress-bar-hidden"></div>
                     <p>Tiempo restante: <del>38 años</del> algunos minutos</p>
                 </div>
             </div>
