Upgrade: corrected by Daniela

--- a/index.html
+++ b/index.html
@@ -64,41 +64,41 @@
                 <div class="gif-box">
                     <div class="bar">
                         <p></p>
-                        <button class="close-button"><img src="./assets/img/button_close.svg" alt="Close button"></button>
+                        <button class="close-button" onclick="reloadRandomGif(event)"><img src="./assets/img/button_close.svg" alt="Close button"></button>
                     </div>
                     <div class="gif-container">
                         <img src="#" alt="Suggested GIF">
-                        <button class="see-more">Ver más...</button>
+                        <button class="see-more" onclick="seeMore(event)">Ver más...</button>
                     </div>
                 </div>
                 <div class="gif-box">
                     <div class="bar">
                         <p></p>
-                        <button class="close-button"><img src="./assets/img/button_close.svg" alt="Close button"></button>
+                        <button class="close-button" onclick="reloadRandomGif(event)"><img src="./assets/img/button_close.svg" alt="Close button"></button>
                     </div>
                     <div class="gif-container">
                         <img src="#" alt="Suggested GIF">
-                        <button class="see-more">Ver más...</button>
+                        <button class="see-more" onclick="seeMore(event)">Ver más...</button>
                     </div>
                 </div>
                 <div class="gif-box">
                     <div class="bar">
                         <p></p>
-                        <button class="close-button"><img src="./assets/img/button_close.svg" alt="Close button"></button>
+                        <button class="close-button" onclick="reloadRandomGif(event)"><img src="./assets/img/button_close.svg" alt="Close button"></button>
                     </div>
                     <div class="gif-container">
                         <img src="#" alt="Suggested GIF">
-                        <button class="see-more">Ver más...</button>
+                        <button class="see-more" onclick="seeMore(event)">Ver más...</button>
                     </div>
                 </div>
                 <div class="gif-box">
                     <div class="bar">
                         <p></p>
-                        <button class="close-button"><img src="./assets/img/button_close.svg" alt="Close button"></button>
+                        <button class="close-button" onclick="reloadRandomGif(event)"><img src="./assets/img/button_close.svg" alt="Close button"></button>
                     </div>
                     <div class="gif-container">
                         <img src="#" alt="Suggested GIF">
-                        <button class="see-more">Ver más...</button>
+                        <button class="see-more" onclick="seeMore(event)">Ver más...</button>
                     </div>
                 </div>
             </div>
